fix: the client config crashed the game before the title screen
defineInList was given List.of(...). NeoForge validates a spec by testing values
against the allowed list, and one of the values it tests while building the
default file is null — which an immutable list answers with a
NullPointerException rather than false. Config loading failed, and with it mod
loading, so the game never started.

Arrays.asList tolerates contains(null), which is why the rest of the codebase and
most of NeoForge use it here.

Worth recording how this got past me: I checked the previous launch by grepping
for "Sound engine started", saw it, and reported the client up with no errors. The
sound engine starts before configs finish loading, so the line I was watching for
could not have told me. The check now waits for the title screen and looks for the
crash markers explicitly, and confirms pta-client.toml is actually written.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>